--- a/roles/my-use-case/templates/hot-appsec-jobs.yml.j2
+++ b/roles/my-use-case/templates/hot-appsec-jobs.yml.j2
@@ -13,7 +13,7 @@ controller:
                 }
                 definition {
                   cpsScm {
-                    scriptPath('jenkins/build.Jenkinsfile')
+                    scriptPath('jenkins/appsec/build.Jenkinsfile')
                     scm {
                       git {
                           remote { 
@@ -37,7 +37,7 @@ controller:
                 }
                 definition {
                   cpsScm {
-                    scriptPath('jenkins/deployStaging.Jenkinsfile')
+                    scriptPath('jenkins/appsec/deployStaging.Jenkinsfile')
                     scm {
                       git {
                           remote { 
@@ -61,7 +61,7 @@ controller:
                 }
                 definition {
                   cpsScm {
-                    scriptPath('jenkins/test_appsec.Jenkinsfile')
+                    scriptPath('jenkins/appsec/test_appsec.Jenkinsfile')
                     scm {
                       git {
                           remote { 
@@ -85,7 +85,7 @@ controller:
                 }
                 definition {
                   cpsScm {
-                    scriptPath('jenkins/deployProd.Jenkinsfile')
+                    scriptPath('jenkins/appsec/deployProd.Jenkinsfile')
                     scm {
                       git {
                           remote { 
